# exif-rs

./: Cargo.toml
examples/: dumpexif.rs  reading.rs
experimental/: jpegreader.py  rafreader.py
src/: exif.rs  fuji.rs  ifd.rs  lib.rs  parser.rs  reader.rs  tag.rs  tiff.rs  util.rs  value.rs  writer.rs
