[package]
name = "exif"
version = "0.5.5"
authors = ["KAMADA Ken'ichi <kamada@nanohz.org>"]
edition = "2021"
rust-version = "1.60"

description = "Exif parsing library written in pure Rust"
documentation = "https://docs.rs/kamadak-exif"
homepage = "https://github.com/kamadak/exif-rs"
repository = "https://github.com/kamadak/exif-rs"
readme = "README"
keywords = ["Exif", "JPEG", "parser", "reader", "TIFF"]
categories = ["multimedia::encoding", "multimedia::images", "parser-implementations"]
license = "BSD-2-Clause"

[dependencies]
enumn = "0.1.0"
byteorder = "1.4.3"
num-traits = "0.2"
num-derive = "0.4.2"
